After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 623671 - Various klass/description/rank fixes
Various klass/description/rank fixes
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-libav
unspecified
Other All
: Normal normal
: 0.10.11
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2010-07-06 12:02 UTC by Edward Hervey
Modified: 2010-07-06 13:25 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gstffmpegmux: Set rank of blacklisted muxers to GST_RANK_NONE (1.42 KB, patch)
2010-07-06 12:02 UTC, Edward Hervey
committed Details | Review
codecmap: Fix the caps of various mov/amr formats (2.02 KB, patch)
2010-07-06 12:02 UTC, Edward Hervey
committed Details | Review
ffmpegmux: Add more replacements (930 bytes, patch)
2010-07-06 12:02 UTC, Edward Hervey
committed Details | Review
ffmpegmux: Use "Formatter/Metadata" klass when needed (2.87 KB, patch)
2010-07-06 12:02 UTC, Edward Hervey
committed Details | Review

Description Edward Hervey 2010-07-06 12:02:08 UTC
Putting these here for comment before I push them
Comment 1 Edward Hervey 2010-07-06 12:02:11 UTC
Created attachment 165348 [details] [review]
gstffmpegmux: Set rank of blacklisted muxers to GST_RANK_NONE
Comment 2 Edward Hervey 2010-07-06 12:02:16 UTC
Created attachment 165349 [details] [review]
codecmap: Fix the caps of various mov/amr formats
Comment 3 Edward Hervey 2010-07-06 12:02:21 UTC
Created attachment 165350 [details] [review]
ffmpegmux: Add more replacements
Comment 4 Edward Hervey 2010-07-06 12:02:26 UTC
Created attachment 165351 [details] [review]
ffmpegmux: Use "Formatter/Metadata" klass when needed
Comment 5 Sebastian Dröge (slomo) 2010-07-06 13:07:17 UTC
Looks good to me but can't we just get rid of the muxers for which we have a better replacement? ;)
Comment 6 Tim-Philipp Müller 2010-07-06 13:20:00 UTC
> Looks good to me but can't we just get rid of the muxers for which we have a
> better replacement? ;)

Let's consider that for the next release, but keep them for this one.

Patches look good for me too. I assume you checked the AMR caps are right ('cause there are two variants, one with the initial #! blurb and one without, iirc audio/AMR* vs. audio/*-sh)?
Comment 7 Edward Hervey 2010-07-06 13:23:34 UTC
Yes, the -sh patch is only for the 'container' and not for the actual codec.

Ok, will push patches.
Comment 8 Edward Hervey 2010-07-06 13:24:12 UTC
Attachment 165348 [details] pushed as 38c2b37 - gstffmpegmux: Set rank of blacklisted muxers to GST_RANK_NONE
Attachment 165349 [details] pushed as 6191dbb - codecmap: Fix the caps of various mov/amr formats
Attachment 165350 [details] pushed as 25db74e - ffmpegmux: Add more replacements
Attachment 165351 [details] pushed as f9c8fac - ffmpegmux: Use "Formatter/Metadata" klass when needed